crates/rekindle-client/tests/ui/fail/web_module_without_feature.rs
fn main() {
    let _ = core::mem::size_of::<rekindle_client::adapter_v1::WebSession>();
}
